--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         DOCKER_IMAGE = "simple-api"
         DOCKER_TAG = "${BUILD_NUMBER}"
-        REGISTRY = "ghcr.io/yourusername" // เปลี่ยนเป็น registry ของคุณ
+        REGISTRY = "ghcr.io/PPondWongsatorn" // เปลี่ยนเป็น registry ของคุณ
         CODE_VALUE = "STUDENT_CODE_${BUILD_NUMBER}"
     }
     
@@ -20,6 +20,7 @@ pipeline {
             steps {
                 echo 'Installing dependencies...'
                 sh '''
+                    cd simeple-api
                     python3 -m venv venv
                     . venv/bin/activate
                     pip install -r requirements.txt
