--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -34,6 +34,7 @@ pipeline {
                 echo 'Running unit tests...'
                 sh '''
                     ls -la
+                    cd simple-api
                     . venv/bin/activate
                     python -m pytest test_app.py -v --junitxml=test-results.xml
                 '''
