--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
             }
             post {
                 always {
-                    junit 'test-results.xml'
+                    junit 'simple-api/test-results.xml'
                 }
             }
         }
