--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -98,8 +98,6 @@ pipeline {
                             ${DOCKER_IMAGE}:${DOCKER_TAG}
                         
                         sleep 5
-                        ls -la
-                        pwd
                         python3 -m venv robot-venv
                         . robot-venv/bin/activate
                         pip install -r requirements.txt
@@ -146,7 +144,7 @@ pipeline {
                 branch 'main'
             }
             steps {
-                echo 'Deploying to test environment...'
+                echo 'Deploying to test environment (VM2)...'
                 sshagent(['vm2-ssh-key']) {
                     sh '''
                         ssh -o StrictHostKeyChecking=no user@vm2-ip "
@@ -167,7 +165,7 @@ pipeline {
                 branch 'main'
             }
             steps {
-                echo 'Deploying to pre-production environment...'
+                echo 'Deploying to pre-production environment (VM3)...'
                 sshagent(['vm3-ssh-key']) {
                     sh '''
                         ssh -o StrictHostKeyChecking=no user@vm3-ip "
@@ -178,26 +176,4 @@ pipeline {
                                 -e CODE_VALUE='${CODE_VALUE}' \
                                 ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
                         "
-                    '''
-                }
-            }
-        }
-    }
-    
-    post {
-        always {
-            echo 'Cleaning up...'
-            sh '''
-                docker system prune -f || true
-                rm -rf simple-api/venv || true
-                rm -rf simple-api-robot/robot-venv || true
-            '''
-        }
-        success {
-            echo 'Pipeline completed successfully!'
-        }
-        failure {
-            echo 'Pipeline failed!'
-        }
-    }
-}
+                    ''
