--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -5,7 +5,6 @@ pipeline {
         DOCKER_IMAGE = "simple-api"
         DOCKER_TAG = "${BUILD_NUMBER}"
         REGISTRY = "ghcr.io/PPondWongsatorn"
-        FULL_IMAGE = "${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}"
         CODE_VALUE = "STUDENT_CODE_${BUILD_NUMBER}"
     }
 
@@ -47,25 +46,26 @@ pipeline {
                 }
             }
         }
+
         stage('Build Docker Image') {
             steps {
                 echo 'Building Docker image...'
                 dir("simple-api") {
                     script {
-                        def image = docker.build("${env.FULL_IMAGE}")
+                        def image = docker.build("${DOCKER_IMAGE}:${DOCKER_TAG}")
                         env.DOCKER_IMAGE_ID = image.id
                     }
                 }
             }
         }
-        }
+
         stage('Test Docker Container') {
             steps {
                 echo 'Testing Docker container...'
                 sh """
                     docker run -d --name test-container -p 5001:5000 \
                         -e CODE_VALUE="${CODE_VALUE}" \
-                        ${FULL_IMAGE}
+                        ${DOCKER_IMAGE}:${DOCKER_TAG}
 
                     sleep 10
 
@@ -87,7 +87,7 @@ pipeline {
                 }
             }
         }
-        }
+
         stage('Robot Tests') {
             steps {
                 echo 'Running Robot Framework tests...'
@@ -95,7 +95,7 @@ pipeline {
                     sh """
                         docker run -d --name robot-test-container -p 5002:5000 \
                             -e CODE_VALUE="${CODE_VALUE}" \
-                            ${FULL_IMAGE}
+                            ${DOCKER_IMAGE}:${DOCKER_TAG}
 
                         sleep 5
                         python3 -m venv robot-venv
@@ -122,7 +122,7 @@ pipeline {
                 }
             }
         }
-        }
+
         stage('Push to Registry') {
             when {
                 branch 'main'
@@ -131,13 +131,12 @@ pipeline {
                 echo 'Pushing image to registry...'
                 script {
                     docker.withRegistry('https://ghcr.io', 'github-token') {
-                        def image = docker.image("${FULL_IMAGE}")
+                        def image = docker.image("${DOCKER_IMAGE}:${DOCKER_TAG}")
                         image.push()
                         image.push('latest')
                     }
                 }
             }
-        }
         }
 
         stage('Deploy to Test (VM2)') {
