--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -20,12 +20,12 @@ pipeline {
             steps {
                 echo 'Installing dependencies...'
                 dir('simple-api') {
-                    sh """
+                    sh '''
                         python3 -m venv venv
                         . venv/bin/activate
                         pip install --upgrade pip
                         pip install -r requirements.txt
-                    """
+                    '''
                 }
             }
         }
@@ -34,10 +34,10 @@ pipeline {
             steps {
                 echo 'Running unit tests...'
                 dir('simple-api') {
-                    sh """
+                    sh '''
                         . venv/bin/activate
                         python -m pytest test_app.py -v --junitxml=test-results.xml
-                    """
+                    '''
                 }
             }
             post {
@@ -62,7 +62,7 @@ pipeline {
         stage('Test Docker Container') {
             steps {
                 echo 'Testing Docker container...'
-                sh """
+                sh '''
                     docker run -d --name test-container -p 5001:5000 \
                         -e CODE_VALUE="${CODE_VALUE}" \
                         ${DOCKER_IMAGE}:${DOCKER_TAG}
@@ -78,7 +78,7 @@ pipeline {
                     fi
 
                     echo "Container tests passed"
-                """
+                '''
             }
             post {
                 always {
@@ -92,7 +92,7 @@ pipeline {
             steps {
                 echo 'Running Robot Framework tests...'
                 dir('simple-api-robot') {
-                    sh """
+                    sh '''
                         docker run -d --name robot-test-container -p 5002:5000 \
                             -e CODE_VALUE="${CODE_VALUE}" \
                             ${DOCKER_IMAGE}:${DOCKER_TAG}
@@ -104,7 +104,7 @@ pipeline {
                         mkdir -p ../robot-results
                         robot --variable BASE_URL:http://localhost:5002 \
                               --outputdir ../robot-results tests/
-                    """
+                    '''
                 }
             }
             post {
@@ -143,7 +143,7 @@ pipeline {
             steps {
                 echo 'Deploying to test environment (VM2)...'
                 sshagent(['vm2-ssh-key']) {
-                    sh """
+                    sh '''
                         ssh -o StrictHostKeyChecking=no user@vm2-ip "
                             docker pull ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
                             docker stop simple-api-test || true
@@ -152,7 +152,7 @@ pipeline {
                                 -e CODE_VALUE='${CODE_VALUE}' \
                                 ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
                         "
-                    """
+                    '''
                 }
             }
         }
@@ -164,7 +164,7 @@ pipeline {
             steps {
                 echo 'Deploying to pre-production environment (VM3)...'
                 sshagent(['vm3-ssh-key']) {
-                    sh """
+                    sh '''
                         ssh -o StrictHostKeyChecking=no user@vm3-ip "
                             docker pull ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
                             docker stop simple-api-preprod || true
@@ -173,9 +173,26 @@ pipeline {
                                 -e CODE_VALUE='${CODE_VALUE}' \
                                 ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
                         "
-                    """
+                    '''
                 }
             }
+        }
+    }
+
+    post {
+        always {
+            echo 'Cleaning up...'
+            sh '''
+                docker system prune -f || true
+                rm -rf simple-api/venv || true
+                rm -rf simple-api-robot/robot-venv || true
+            '''
+        }
+        success {
+            echo 'Pipeline completed successfully!'
+        }
+        failure {
+            echo 'Pipeline failed!'
         }
     }
 }
