--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -129,30 +129,38 @@ pipeline {
             }
             steps {
                 echo 'Pushing image to registry...'
-                script {
-                    docker.withRegistry('https://ghcr.io', 'github-token') {
-                        def image = docker.image("${DOCKER_IMAGE}:${DOCKER_TAG}")
-                        image.push()
-                        image.push('latest')
-                    }
+                withCredentials([usernamePassword(credentialsId: 'git_hub', usernameVariable: 'GITHUB_USER', passwordVariable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        echo "${GITHUB_TOKEN}" | docker login ghcr.io -u "${GITHUB_USER}" --password-stdin
+                        docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                        docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${REGISTRY}/${DOCKER_IMAGE}:latest
+                        docker push ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                        docker push ${REGISTRY}/${DOCKER_IMAGE}:latest
+                    '''
                 }
             }
         }
 
         stage('Deploy to Test (VM2)') {
+            when {
+                branch 'main'
+            }
             steps {
                 echo 'Deploying to test environment (VM2)...'
                 sshagent(['vm2']) {
-                    sh '''
-                        ssh -o StrictHostKeyChecking=no test_vm@192.168.56.102 "
-                            docker pull ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
-                            docker stop simple-api-test || true
-                            docker rm simple-api-test || true
-                            docker run -d --name simple-api-test -p 5000:5000 \
-                                -e CODE_VALUE='${CODE_VALUE}' \
-                                ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
-                        "
-                    '''
+                    withCredentials([usernamePassword(credentialsId: 'git_hub', usernameVariable: 'GITHUB_USER', passwordVariable: 'GITHUB_TOKEN')]) {
+                        sh '''
+                            ssh -o StrictHostKeyChecking=no test_vm@192.168.56.102 "
+                                echo '${GITHUB_TOKEN}' | docker login ghcr.io -u ${GITHUB_USER} --password-stdin
+                                docker pull ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                                docker stop simple-api-test || true
+                                docker rm simple-api-test || true
+                                docker run -d --name simple-api-test -p 5000:5000 \
+                                    -e CODE_VALUE='${CODE_VALUE}' \
+                                    ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                            "
+                        '''
+                    }
                 }
             }
         }
@@ -164,16 +172,19 @@ pipeline {
             steps {
                 echo 'Deploying to pre-production environment (VM3)...'
                 sshagent(['vm3']) {
-                    sh '''
-                        ssh -o StrictHostKeyChecking=no test_vm@192.168.56.103 "
-                            docker pull ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
-                            docker stop simple-api-preprod || true
-                            docker rm simple-api-preprod || true
-                            docker run -d --name simple-api-preprod -p 5000:5000 \
-                                -e CODE_VALUE='${CODE_VALUE}' \
-                                ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
-                        "
-                    '''
+                    withCredentials([usernamePassword(credentialsId: 'git_hub', usernameVariable: 'GITHUB_USER', passwordVariable: 'GITHUB_TOKEN')]) {
+                        sh '''
+                            ssh -o StrictHostKeyChecking=no test_vm@192.168.56.103 "
+                                echo '${GITHUB_TOKEN}' | docker login ghcr.io -u ${GITHUB_USER} --password-stdin
+                                docker pull ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                                docker stop simple-api-preprod || true
+                                docker rm simple-api-preprod || true
+                                docker run -d --name simple-api-preprod -p 5000:5000 \
+                                    -e CODE_VALUE='${CODE_VALUE}' \
+                                    ${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                            "
+                        '''
+                    }
                 }
             }
         }
