--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         DOCKER_IMAGE = "simple-api"
         DOCKER_TAG = "${BUILD_NUMBER}"
-        REGISTRY = "ghcr.io/ppondwongsatorn"
+        REGISTRY = "ppondwongsatorn"
         CODE_VALUE = "STUDENT_CODE_${BUILD_NUMBER}"
     }
 
@@ -123,18 +123,18 @@ pipeline {
             }
         }
 
-        stage('Push to Registry') {
-            steps {
-                echo 'Pushing image to registry...'
-                script {
-                    docker.withRegistry("${REGISTRY}", 'git_hub') {
-                        def image = docker.image("${DOCKER_IMAGE}:${DOCKER_TAG}")
-                        image.push()
-                        image.push('latest')
-                    }
-                }
+stage('Push to Registry') {
+    steps {
+        echo 'Pushing image to registry...'
+        script {
+            docker.withRegistry("https://ghcr.io", 'git_hub') {
+                def image = docker.image("ghcr.io/${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}")
+                image.push()
+                image.push('latest')
             }
         }
+    }
+}
 
         stage('Deploy to Test (VM2)') {
             steps {
