--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         DOCKER_IMAGE = "simple-api"
         DOCKER_TAG = "${BUILD_NUMBER}"
         REGISTRY = "ppondwongsatorn"
-        CODE_VALUE = "STUDENT_CODE_${BUILD_NUMBER}_1"
+        CODE_VALUE = "STUDENT_CODE_${BUILD_NUMBER}"
     }
 
     stages {
