--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
                 echo 'Checking out source code...'
                 checkout scm
                 sh '''
+                rm -rf simple-api-robot || true
                 git clone https://github.com/patiphanpk/jenkins_robot.git simple-api-robot
                 '''
             }
