--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         DOCKER_TAG = "${BUILD_NUMBER}"
         REGISTRY = "ppondwongsatorn"
         CODE_VALUE = "STUDENT_CODE_${BUILD_NUMBER}"
+        DOCKER_BUILDKIT = "1"
     }
 
     stages {
