--- a/simple-api/Jenkinsfile
+++ b/simple-api/Jenkinsfile
@@ -121,7 +121,7 @@ pipeline {
                 }
             }
         }
-        
+
 
         stage('Push to Registry') {
             steps {
@@ -148,6 +148,27 @@ pipeline {
                             docker run -d --name simple-api-test -p 5000:5000 \
                                 -e CODE_VALUE='${CODE_VALUE}' \
                                 ghcr.io/${REGISTRY}/${DOCKER_IMAGE}:${DOCKER_TAG}
+                        "
+                    '''
+                }
+            }
+        }
+
+        stage('Robot Tests on VM2') {
+            steps {
+                echo 'Running Robot Framework tests on VM2...'
+                sshagent(['vm2']) {
+                    sh '''
+                        ssh -o StrictHostKeyChecking=no test_vm@192.168.56.102 "
+                            rm -rf simple-api-robot || true
+                            git clone https://github.com/patiphanpk/jenkins_robot.git simple-api-robot
+                            cd simple-api-robot
+                            python3 -m venv robot-venv
+                            . robot-venv/bin/activate
+                            pip install -r requirements.txt
+                            mkdir -p robot-results
+                            robot --variable BASE_URL:http://localhost:5000 \\
+                            --outputdir robot-results tests/
                         "
                     '''
                 }
